<resources>
    <string name="app_movies">Peliculas</string>
    <string name="title_activity_movies">MoviesActivity</string>

    <string name="accept">Aceptar</string>
    <string name="loading">Cargando…</string>
    <string name="ok">OK</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="movie_backdrop_image">Movie Backdrop Image</string>
    <string name="movie_thumbnail_image">Movie Thumbnail Image</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="trailers">Trailers:</string>
    <string name="status_image">Status Image</string>
    <string name="main_movie_image">Main Movie Image</string>
    <string name="play_image">Play Image</string>
    <string name="trailer_image">Trailer Image</string>
    <string name="top_rated">Top Rated</string>

</resources>