<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="modelMovie"
            type="com.meza.moviesapp.model.MovieModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp"
                android:contentDescription="@string/movie_backdrop_image"
                app:urlImageGlide="@{modelMovie.urlBaseImage + modelMovie.itemMovie.backdrop_path}"/>

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movie_backdrop"
                android:contentDescription="@string/movie_thumbnail_image"
                app:urlImageGlide="@{modelMovie.urlBaseImage + modelMovie.itemMovie.poster_path}"/>

            <TextView
                android:id="@+id/release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/release_date"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/movie_title"
                app:layout_constraintStart_toEndOf="@+id/rating_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/release_date_title"
                app:layout_constraintTop_toBottomOf="@+id/release_date_title"
                tools:text="@{modelMovie.itemMovie.release_date}" />

            <TextView
                android:id="@+id/rating_title"
                android:layout_width="57dp"
                android:layout_height="22dp"
                android:layout_marginTop="10dp"
                android:text="@string/rating"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/movie_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/rating_title"
                app:layout_constraintTop_toBottomOf="@+id/rating_title"
                tools:text="@{String.valueOf(modelMovie.itemMovie.vote_average)}" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:textColor="#de000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_backdrop"
                tools:text="@{modelMovie.itemMovie.title}" />

            <TextView
                android:id="@+id/synopsis_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:text="@string/synopsis"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_title"
                tools:text="@{modelMovie.itemMovie.overview}" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/synopsis" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>